# xml_exam

./: CMakeLists.txt  LICENSE  README.md
include/: xml_exam.h
src/: main.cpp  xml_exam.cpp
test/: test_xml_exam.cpp
